@@ -78,6 +78,7 @@ import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.model.FunctionCallEdge;
 import org.sosy_lab.cpachecker.cfa.model.FunctionReturnEdge;
+import org.sosy_lab.cpachecker.cfa.types.MachineModel;
 import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
@@ -99,13 +100,13 @@ import org.sosy_lab.cpachecker.cpa.location.LocationState;
 import org.sosy_lab.cpachecker.cpa.location.LocationStateFactory;
 import org.sosy_lab.cpachecker.util.AbstractStates;
 import org.sosy_lab.cpachecker.util.BiPredicates;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.LoopStructure.Loop;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.expressions.And;
 import org.sosy_lab.cpachecker.util.expressions.ExpressionTree;
 import org.sosy_lab.cpachecker.util.expressions.ExpressionTrees;
 import org.sosy_lab.cpachecker.util.expressions.LeafExpression;
+import org.sosy_lab.cpachecker.util.floatingpoint.FloatValue;
 import org.sosy_lab.cpachecker.util.states.MemoryLocation;
 
 @Options(prefix = "termination")
@@ -159,6 +160,8 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
   private final LocationStateFactory locFac;
   private @Nullable Loop nonterminatingLoop = null;
 
+  private final MachineModel machineModel;
+
   public TerminationStatistics(Configuration pConfig, LogManager pLogger, CFA pCFA)
       throws InvalidConfigurationException {
     this(pConfig, pLogger, 0, pCFA);
@@ -170,6 +173,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
     pConfig.inject(this, TerminationStatistics.class);
     logger = checkNotNull(pLogger);
     totalLoops = pTotalNumberOfLoops;
+    machineModel = pCFA.getMachineModel();
 
     witnessExporter =
         new WitnessExporter(
@@ -550,7 +554,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
       ARGState pred = nodeToARGState.get(loc);
       assert pred != null;
 
-      for (CFAEdge leave : CFAUtils.leavingEdges(loc)) {
+      for (CFAEdge leave : loc.getLeavingEdges()) {
         if (pLoop.getLoopNodes().contains(leave.getSuccessor())) {
           ARGState succ = nodeToARGState.get(leave.getSuccessor());
           if (succ == null) {
@@ -561,9 +565,10 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
           succ.addParent(pred);
 
-        } else if (leave instanceof FunctionCallEdge && pred.getChildren().isEmpty()) {
+        } else if (leave instanceof FunctionCallEdge functionCallEdge
+            && pred.getChildren().isEmpty()) {
           // function calls are not considered to be part of the loop
-          CFANode locContinueLoop = ((FunctionCallEdge) leave).getReturnNode();
+          CFANode locContinueLoop = functionCallEdge.getReturnNode();
           Map<Pair<CFANode, CallstackState>, ARGState> contextToARGState = new HashMap<>();
           Pair<CFANode, CallstackState> context =
               Pair.of(
@@ -583,15 +588,12 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
             ARGState predFun = contextToARGState.get(context);
             assert predFun != null;
 
-            for (CFAEdge leaveFun : CFAUtils.leavingEdges(context.getFirst())) {
+            for (CFAEdge leaveFun : context.getFirst().getLeavingEdges()) {
               Pair<CFANode, CallstackState> newContext =
                   Pair.of(leaveFun.getSuccessor(), context.getSecond());
 
-              if (leaveFun instanceof FunctionReturnEdge) {
-                if (!context
-                    .getSecond()
-                    .getCallNode()
-                    .equals(((FunctionReturnEdge) leaveFun).getCallNode())) {
+              if (leaveFun instanceof FunctionReturnEdge functionReturnEdge) {
+                if (!context.getSecond().getCallNode().equals(functionReturnEdge.getCallNode())) {
                   continue; // false context
                 }
                 newContext =
@@ -640,10 +642,10 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
   private ExpressionTree<Object> buildInvariantFrom(NonTerminationArgument pArg) {
     ExpressionTree<Object> computedQuasiInvariant = ExpressionTrees.getTrue();
-    if (pArg instanceof GeometricNonTerminationArgument) {
-      computedQuasiInvariant = buildInvariantFrom((GeometricNonTerminationArgument) pArg);
-    } else if (pArg instanceof InfiniteFixpointRepetition) {
-      computedQuasiInvariant = buildInvaraintFrom((InfiniteFixpointRepetition) pArg);
+    if (pArg instanceof GeometricNonTerminationArgument geometricNonTerminationArgument) {
+      computedQuasiInvariant = buildInvariantFrom(geometricNonTerminationArgument);
+    } else if (pArg instanceof InfiniteFixpointRepetition infiniteFixpointRepetition) {
+      computedQuasiInvariant = buildInvaraintFrom(infiniteFixpointRepetition);
     }
     return computedQuasiInvariant;
   }
@@ -657,8 +659,8 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
       for (Entry<IProgramVar, Rational> entry : arg.getStateHonda().entrySet()) {
         RankVar rankVar = (RankVar) entry.getKey();
-        if (rankVar.getTerm() instanceof ApplicationTerm
-            && ((ApplicationTerm) rankVar.getTerm()).getParameters().length != 0) {
+        if (rankVar.getTerm() instanceof ApplicationTerm applicationTerm
+            && applicationTerm.getParameters().length != 0) {
           // ignore UFs
           continue;
         }
@@ -697,14 +699,19 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
     Object termVal;
 
     for (Entry<Term, Term> entry : arg.getValuesAtHonda().entrySet()) {
-      if (entry.getKey() instanceof TermVariable && entry.getValue() instanceof ConstantTerm) {
-        varName = toOrigName((TermVariable) entry.getKey());
-        termVal = ((ConstantTerm) entry.getValue()).getValue();
+      if (entry.getKey() instanceof TermVariable termVariable
+          && entry.getValue() instanceof ConstantTerm constantTerm) {
+        varName = toOrigName(termVariable);
+        termVal = constantTerm.getValue();
 
         if (termVal instanceof BigDecimal) {
+          // FIXME: Conversion from BigDecimal to FloatValue is lossy and may cause rounding issues
           litexpr =
               new CFloatLiteralExpression(
-                  FileLocation.DUMMY, CNumericTypes.FLOAT, (BigDecimal) termVal);
+                  FileLocation.DUMMY,
+                  machineModel,
+                  CNumericTypes.FLOAT,
+                  FloatValue.fromString(FloatValue.Format.Float32, termVal.toString()));
         } else if (termVal instanceof BigInteger) {
           litexpr =
               CIntegerLiteralExpression.createDummyLiteral(
@@ -727,10 +734,10 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
       return CIntegerLiteralExpression.createDummyLiteral(
           rat.numerator().divide(rat.denominator()).longValue(), CNumericTypes.INT);
     } else {
+      FloatValue n = FloatValue.fromInteger(FloatValue.Format.Float32, rat.numerator());
+      FloatValue d = FloatValue.fromInteger(FloatValue.Format.Float32, rat.numerator());
       return new CFloatLiteralExpression(
-          FileLocation.DUMMY,
-          CNumericTypes.FLOAT,
-          new BigDecimal(rat.numerator()).divide(new BigDecimal(rat.denominator())));
+          FileLocation.DUMMY, machineModel, CNumericTypes.FLOAT, n.divide(d));
     }
   }
 
@@ -773,7 +780,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
       result = result.substring(1, result.length() - 1);
       List<String> t = extractArgs(result);
 
-      if (t.get(0).startsWith("*")) {
+      if (t.getFirst().startsWith("*")) {
         if (t.size() == 2) {
           return "*(" + expressionVarName(t.get(1)) + ")";
         } else if (t.size() == 3) {
@@ -781,7 +788,7 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
         }
       }
 
-      if (t.get(0).startsWith("+")) {
+      if (t.getFirst().startsWith("+")) {
         if (t.size() == 3) {
           return "(" + expressionVarName(t.get(1)) + ")+(" + expressionVarName(t.get(2)) + ")";
         }
@@ -817,13 +824,9 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
     for (int i = 0; i < extendedInput.length(); i++) {
       c = extendedInput.charAt(i);
       switch (c) {
-        case '(':
-          openBrackets++;
-          break;
-        case ')':
-          openBrackets--;
-          break;
-        case ' ':
+        case '(' -> openBrackets++;
+        case ')' -> openBrackets--;
+        case ' ' -> {
           if (openBrackets == 0) {
             if (bd.length() != 0) {
               args.add(bd.toString());
@@ -832,8 +835,8 @@ public class TerminationStatistics extends LassoAnalysisStatistics {
 
             continue;
           }
-          break;
-        default:
+        }
+        default -> {}
       }
       bd.append(c);
     }
