@@ -125,7 +125,9 @@ public class CounterexampleToWitness extends AbstractYAMLWitnessExporter {
     // it is a local variable, then it will not be in scope. There are methods to check this, see
     // for example outOfScopeVariables in a CFANode.
     // TODO: Add a method to export these assumptions
-    if (!CFAUtils.leavingEdges(pEdge.getSuccessor())
+    if (!pEdge
+        .getSuccessor()
+        .getLeavingEdges()
         .filter(CDeclarationEdge.class)
         .transform(CDeclarationEdge::getDeclaration)
         .filter(CFunctionDeclaration.class)
@@ -140,7 +142,7 @@ public class CounterexampleToWitness extends AbstractYAMLWitnessExporter {
     // Since currently there is no straightforward way to do this, we simply do not export these
     // waypoints currently
     // TODO: Add a method to export these assumptions
-    if (!CFAUtils.leavingEdges(pEdge.getSuccessor()).filter(BlankEdge.class).isEmpty()
+    if (!pEdge.getSuccessor().getLeavingEdges().filter(BlankEdge.class).isEmpty()
         || pEdge instanceof BlankEdge) {
       return Optional.empty();
     }
@@ -196,7 +198,7 @@ public class CounterexampleToWitness extends AbstractYAMLWitnessExporter {
       // an iteration or if statement
       // To export the branching waypoint, we first find the IfElement or IterationElement
       // containing it. Then we look for the FileLocation of the structure
-      // Currently we only export IfStructures, since there is no nice way to say how often a loop
+      // Currently, we only export IfStructures, since there is no nice way to say how often a loop
       // should be traversed and exporting this information will quickly make the witness
       // difficult to read
       Optional<IfElement> optionalIfElement =
@@ -396,7 +398,7 @@ public class CounterexampleToWitness extends AbstractYAMLWitnessExporter {
         } else {
           statement =
               assumptions
-                  .transform(stmt -> stmt.toParenthesizedASTString())
+                  .transform(CExpression::toParenthesizedASTString)
                   // Remove any temporary variables created by CPAchecker
                   .filter(s -> !s.contains("__CPAchecker_TMP"))
                   .join(Joiner.on(" && "));
@@ -438,9 +440,10 @@ public class CounterexampleToWitness extends AbstractYAMLWitnessExporter {
 
     // Add target
     // In contrast to the semantics of assumptions, targets are evaluated at the next possible
-    // segment point. Therefore instead of creating a location record the way as is for assumptions,
+    // segment point. Therefore, instead of creating a location record the way as is for
+    // assumptions,
     // this needs to be done using another function
-    CFAEdge lastEdge = edges.get(edges.size() - 1);
+    CFAEdge lastEdge = edges.getLast();
     segments.add(SegmentRecord.ofOnlyElement(targetWaypoint(lastEdge, astCFARelation)));
 
     exportEntries(
@@ -450,7 +453,7 @@ public class CounterexampleToWitness extends AbstractYAMLWitnessExporter {
   /**
    * Export the given counterexample to a witness file. The format of the witness file is determined
    * by the witness versions given in the configuration. All versions of witnesses will be exported.
-   * Currently only Version 2 exists for Violation Witnesses.
+   * Currently, only Version 2 exists for Violation Witnesses.
    *
    * @param pCex The counterexample to export.
    * @param pOutputFileTemplate The template for the output file. The template will be used to *
@@ -466,7 +469,6 @@ public class CounterexampleToWitness extends AbstractYAMLWitnessExporter {
         case V2 -> exportWitnessVersion2(pCex, outputFile);
         case V2d1 ->
             logger.log(Level.INFO, "There is currently no version 2.1 for Violation Witnesses.");
-        default -> throw new AssertionError("Unknown witness version: " + witnessVersion);
       }
     }
   }
